[package]
name = "garbage-remove"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
humantime = "2.1.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
toml = "0.8.19"

[profile.release]
lto = true
strip = true
codegen-units = 1

