[package]
name = "garbage-remove"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
glob-match = "0.2.1"
kanal = "0.1.1"
log = "0.4.27"
notify = "8.0.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.44.2", default-features = false, features = ["rt-multi-thread", "fs", "macros"] }
toml = "0.8.21"

[profile.release]
lto = true
strip = true
codegen-units = 1
