[package]
name = "garbage-remove"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.12"
compio = { version = "0.14.0", default-features = false, features = ["runtime", "io-uring", "macros"] }
glob = "0.3.2"
glob-match = "0.2.1"
kanal = "0.1.1"
notify = "8.0.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
spdlog-rs = { version = "0.4.2", features = ["level-info"] }
toml = "0.8.22"

[profile.release]
lto = true
strip = true
codegen-units = 1
